syntax = "proto3";

package einride.avro.example.v1;

option go_package = "go.einride.tech/protobuf-avro/internal/examples/proto/gen/einride/avro/example/v1;examplev1";


message ExampleRecursive {
  ExampleRecursive recursive = 1;
}
