syntax = "proto3";

package einride.avro.example.v1;

option go_package = "github.com/einride/protobuf-avro-go/internal/examples/proto/gen/einride/avro/example/v1;examplev1";

import "google/protobuf/any.proto";

message ExampleAny {
  google.protobuf.Any any = 1;
}
