syntax = "proto3";

package einride.avro.example.v1;

option go_package = "github.com/einride/protobuf-avro-go/internal/examples/proto/gen/einride/avro/example/v1;examplev1";

import "google/protobuf/wrappers.proto";

message ExampleList {
  repeated int64 int64_list = 1;
  repeated string string_list = 2;
  repeated Enum enum_list = 3;
  repeated Nested nested_list = 4;
  repeated google.protobuf.FloatValue float_value_list = 5;

  enum Enum {
    ENUM_UNSPECIFIED = 0;
    ENUM_VALUE1 = 1;
    ENUM_VALUE2 = 2;
  }

  message Nested {
    repeated string string_list = 1;
  }
}
